zeroidc/vendor/quote/tests/ui/wrong-type-span.stderr
error[E0308]: mismatched types
 --> tests/ui/wrong-type-span.rs:6:20
  |
6 |     quote_spanned!(span=> #x);
  |     ---------------^^^^------
  |     |              |
  |     |              expected struct `Span`, found `&str`
  |     expected due to this
